lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-svc-1
  labels:
    app: hello-v1
  annotations:
    oci.oraclecloud.com/load-balancer-type: "lb"
    service.beta.kubernetes.io/oci-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 50000
  selector:
    greeting: hello
    version: one
