web-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oci-helloworld-one  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oci-helloworld-one
  template:
    metadata:
      labels:
        app: oci-helloworld-one
    spec:
      containers:
      - name: oci-helloworld-one
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            host:
            path: /
            port: 80
            httpHeaders:
            - name: Host
              value: oci-helloworld-two.default
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: oci-helloworld-one  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: oci-helloworld-one
