web-app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oci-helloworld-two  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oci-helloworld-two
  template:
    metadata:
      labels:
        app: oci-helloworld-two
    spec:
      containers:
      - name: oci-helloworld-two
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: oci-helloworld-two  
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: oci-helloworld-two
