ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocilabs-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: hello-world-1
      port:
        number: 60000
  tls:
    - secretName: tls-secret
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: hello-world-1
            port:
              number: 60000
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-world-2
            port:
              number: 9080
